Add some compiler flags to the testcase generator Makefile.
Speed up the executable; more warnings; etc.

--- a/my-own-problems/counters-on-a-tree/testcase-generator/Makefile
+++ b/my-own-problems/counters-on-a-tree/testcase-generator/Makefile
@@ -1,2 +1,2 @@
 testcase-generator:
-	$(CXX) -std=c++17 counters-on-a-tree-testcase-generator.cpp -I ../../shared
+	$(CXX) -std=c++17 counters-on-a-tree-testcase-generator.cpp -I ../../shared -O3 -g3 -Wall
