--- a/my-own-problems/simple-markdown-editor/testcase-generator/Makefile
+++ b/my-own-problems/simple-markdown-editor/testcase-generator/Makefile
@@ -1,2 +1,2 @@
 testcase-generator:
-	$(CXX) -std=c++17 simple-markdown-editor.cpp -I ../../shared -O3 -g3 -Wall
+	$(CXX) -std=c++17 simple-markdown-editor-testcase-generator.cpp -I ../../shared -O3 -g3 -Wall
